# iwp-tools

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release-binary.yml  release.yml
.trae/documents/: fast-mode-checkpoint-decouple-plan.md  iwp-global-token-architecture-plan.md
architecture/: snapshot-history-architecture.md
iwp_build/: ARCHITECTURE.md  README.md  cli.py  watch.py
iwp_build/commands/: build_args.py  common_args.py  history_args.py  option_resolver.py  session_args.py  verify_args.py  watch_args.py
iwp_build/output/: __init__.py  policy.py  renderers.py  summary.py  utils.py
iwp_build/reconcile/: __init__.py  diagnostics.py  guidance.py  hints.py  next_actions.py  orchestrator.py  path_hints.py  payload.py  service.py  session_resolution.py
iwp_build/services/: __init__.py  build.py  verify.py  watch.py
iwp_build/tests/: test_build_commit.py  test_e2e_flow.py  test_e2e_suite.py  test_history_cli.py  test_session_cli.py  test_watch.py
iwp_build/tests/e2e/: test_authoring_tokens_build.py  test_bootstrap_no_baseline_no_links.py  test_bootstrap_official_schema.py  test_fast_mode_no_iwp.py  test_feature_add_node.py  test_feature_delete_node.py  test_feature_modify_node.py  test_history_restore_flow.py  test_page_only_namespaced_build.py
iwp_lint/: ARCHITECTURE.md  README.md  __init__.py  api.py  cli.py  comment_scanner.py  config.py  diff_resolver.py  engine.py  md_parser.py  schema_loader.py  schema_semantics.py  schema_validator.py  versioning.py
iwp_lint/_bundled_schema/: __init__.py  iwp-schema.v1.json
iwp_lint/core/: catalog_query.py  catalog_types.py  code_sidecar_writer.py  compiled_verifier.py  compiled_writer.py  coverage_policy.py  engine.py  errors.py  history_service.py  link_normalizer.py  link_validation.py  models.py  node_catalog.py  node_index_store.py  reconcile_runtime.py  report_helpers.py  session_service.py
iwp_lint/core/reconcile/: __init__.py  diagnostics.py  guidance.py  hints.py  next_actions.py  payload.py  utils.py
iwp_lint/parsers/: comment_scanner.py  markdown_outline.py  md_parser.py  node_registry.py
iwp_lint/schema/: schema_loader.py  schema_models.py  schema_semantics.py  schema_validator.py
iwp_lint/tests/: helpers.py  test_e2e_flow.py  test_e2e_suite.py  test_history_service.py  test_regression.py  test_session_service.py
iwp_lint/tests/e2e/: test_authoring_tokens.py  test_code_only_and_compiled.py  test_deleted_node.py  (+2 more)
iwp_lint/vcs/: diff_resolver.py  snapshot_diff.py  snapshot_store.py  task_store.py
schema/: iwp-schema.v1.json
test/: README.md  helpers.py
test/fast_mode_no_iwp/: .iwp-lint.yaml
test/feature_add_node/: .iwp-lint.yaml
test/i18n_zh_en/: .iwp-lint.yaml
test/page_only_namespaced/: .iwp-lint.yaml
test/schema/: test-schema.i18n.min.json  test-schema.min.json
(+6 files in other folders)
